--- a/css/style.css
+++ b/css/style.css
@@ -491,13 +491,15 @@
 .footer-links-ln1 {
   display: flex;
   justify-content: center;
-  padding: 30px 0 10px 0;
+  padding-top: 2.5em;
+  margin-bottom: 1.5em;
 }
 
 .footer-links-ln2 {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  padding-bottom: 2.5em;
 }
 
 .footer-links-ln2 a {
@@ -517,7 +519,6 @@
 }
 
 .footer-legal {
-  height: 122px;
   text-align: center;
   font-size: 13px;
   font-family: 'ARS Maquette', sans-serif;
@@ -567,6 +568,10 @@
 
 .heart {
   color: red;
+}
+
+.footer-legal div {
+  padding: 2.5em 0;
 }
 
 @media (min-width: 768px) {
