--- a/css/style.css
+++ b/css/style.css
@@ -436,14 +436,49 @@
 }
 
 .sub-article-img {
-  width: 96px;
+  /* flex: 1 1 96px; */
+  background-color: #000;
+  background-position: 50%;
+  background-size: cover;
   height: 96px;
-  /* overflow: hidden; */
+  width: 96px;
 }
 
-.sub-article-img img {
-  width: 200px;
+.sub-a-bg-img1 {
+  background-image: url('../images/first-replacement.jpg');
 }
+
+.sub-a-bg-img2 {
+
+}
+
+.sub-a-bg-img3 {
+  
+}
+
+..sub-a-bg-img4 {
+  background-image: url('../images/GodfallTeaser04-796x448.png');
+}
+
+.sub-a-bg-img5 {
+  
+}
+
+.sub-a-bg-img6 {
+  
+}
+
+.sub-a-bg-img7 {
+  
+}
+
+.sub-a-bg-img8 {
+  
+}
+
+/* .sub-article-img img {
+  width: 200px;
+} */
 
 .sub-article div {
   display: block;
